owner model may be missed

--- a/src/Locale/bn/default.po
+++ b/src/Locale/bn/default.po
@@ -768,6 +768,9 @@ msgstr "জরিমানা"
 msgid "Collection Amount"
 msgstr "আদায়কৃত পরিমাণ"
 
+msgid "Collected Amount"
+msgstr "আদায়কৃত পরিমাণ
+
 msgid "Collection Date"
 msgstr "আদায়ের তারিখ"
 
